@@ -12,10 +12,15 @@ OWA : efyzc4
 - Click on the '+' button, Select Java, then direct to the lib folder in your javafx-sdk-17.0.1.
 - Click on Edit Configurations ( Modify options -> Add VM options )  <br/> ![image](https://user-images.githubusercontent.com/93503454/144802698-41ef598c-a7c1-425c-84f7-1e88b0f6c2b5.png)
 
-- Add the following line into the VM options
+- Add the following line into the VM options and then click apply
 ```
 --module-path (JavaFX lib Folder Path) --add-modules=javafx.controls
 ```
+- In my case, the path looks like this
+```
+--module-path "C:\Users\User\Desktop\javafx-sdk-17.0.1\lib" --add-modules=javafx.controls
+```
+
 
 
 ## Old descriptions
